--- a/docker/docker-compose/docker-compose.yml
+++ b/docker/docker-compose/docker-compose.yml
@@ -52,3 +52,40 @@ services:
       - "9000:9000"
     volumes:
       - ../../src:/var/www/html
+
+  # Container: Composer
+  composer:
+    networks:
+      - web-app
+    container_name: composer
+    image: composer:2.1.5
+    working_dir: /var/www/html
+    volumes:
+      - ../../src:/var/www/html
+
+  # Container: NPM
+  npm:
+    networks:
+      - web-app
+    container_name: npm
+    image: node:16-alpine
+    working_dir: /var/www/html
+    volumes:
+        - ../../src:/var/www/html
+    entrypoint: ['npm']
+
+  # Container: Artisan
+  artisan:
+    networks:
+      - web-app
+    container_name: artisan
+    build:
+      context: ./
+      dockerfile: ../../docker/containers/Dockerfile
+    image: artisan:artisan-alpine
+    working_dir: /var/www/html
+    volumes:
+        - ../../src:/var/www/html
+    depends_on:
+      - mysql
+    entrypoint: ['/var/www/html/artisan']
