--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,8 +13,8 @@ services:
     ports:
       - "9100:80"
     volumes:
-      - ../../src:/var/www/html
-      - ../../docker/containers/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+      - "${PATH_PROJECT_SOURCE}:/var/www/html"
+      - "${PATH_NGINX_CONFIGS}:/etc/nginx/conf.d/default.conf"
     depends_on:
       - php
       - mysql
@@ -30,12 +30,12 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - ../../docker/containers/mysql:/var/lib/mysql
+      - "${DB_MYSQL_VOLUME}:/var/lib/mysql"
     environment:
-      MYSQL_DATABASE: db_docker_study
-      MYSQL_USER: dbUserDev
-      MYSQL_PASSWORD: dbUserDev123
-      MYSQL_ROOT_PASSWORD: dbUserRoot123
+      MYSQL_DATABASE: "${DB_MYSQL_DATABASE}"
+      MYSQL_USER: "${DB_MYSQL_USER}"
+      MYSQL_PASSWORD: "${DB_MYSQL_PASSWORD}"
+      MYSQL_ROOT_PASSWORD: "${DB_MYSQL_ROOT_PASSWORD}"
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
 
@@ -45,13 +45,13 @@ services:
       - web-app
     container_name: php
     build:
-      context: ./
-      dockerfile: ../../docker/containers/Dockerfile
+      context: .
+      dockerfile: Dockerfile
     image: php:php7.4-fpm-alpine
     ports:
       - "9000:9000"
     volumes:
-      - ../../src:/var/www/html
+      - "${PATH_PROJECT_SOURCE}:/var/www/html"
 
   # Container: Composer
   composer:
@@ -61,7 +61,7 @@ services:
     image: composer:2.1.5
     working_dir: /var/www/html
     volumes:
-      - ../../src:/var/www/html
+      - "${PATH_PROJECT_SOURCE}:/var/www/html"
 
   # Container: NPM
   npm:
@@ -71,7 +71,7 @@ services:
     image: node:16-alpine
     working_dir: /var/www/html
     volumes:
-        - ../../src:/var/www/html
+        - "${PATH_PROJECT_SOURCE}:/var/www/html"
     entrypoint: ['npm']
 
   # Container: Artisan
@@ -80,12 +80,14 @@ services:
       - web-app
     container_name: artisan
     build:
-      context: ./
-      dockerfile: ../../docker/containers/Dockerfile
+      context: .
+      dockerfile: Dockerfile
     image: artisan:artisan-alpine
+    env_file:
+      - ../docker/environments/${APP_ENV}.env
     working_dir: /var/www/html
     volumes:
-        - ../../src:/var/www/html
+        - "${PATH_PROJECT_SOURCE}:/var/www/html"
     depends_on:
       - mysql
     entrypoint: ['/var/www/html/artisan']
