feature/DLT-22-env-file-refactor
- Refactor variables in the local env file

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -36,12 +36,12 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - "${DB_MYSQL_VOLUME}:/var/lib/mysql"
+      - "${DB_VOLUME}:/var/lib/mysql"
     environment:
-      MYSQL_DATABASE: "${DB_MYSQL_DATABASE}"
-      MYSQL_USER: "${DB_MYSQL_USER}"
-      MYSQL_PASSWORD: "${DB_MYSQL_PASSWORD}"
-      MYSQL_ROOT_PASSWORD: "${DB_MYSQL_ROOT_PASSWORD}"
+      MYSQL_DATABASE: "${DB_NAME}"
+      MYSQL_USER: "${DB_USERNAME}"
+      MYSQL_PASSWORD: "${DB_PASSWORD}"
+      MYSQL_ROOT_PASSWORD: "${DB_PASSWORD_ROOT}"
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
 
@@ -94,7 +94,7 @@ services:
       dockerfile: containers/php/Dockerfile
     image: artisan:laravel-5.8
     env_file:
-      - ../docker/environments/${APP_ENV}.env
+      - ${PATH_ENV_CONFIGS}/${SYS_ENV}.env
     working_dir: /var/www/html
     volumes:
         - "${PATH_PROJECT_SOURCE}:/var/www/html"
