--- a/docker/environments/local.env
+++ b/docker/environments/local.env
@@ -1,21 +1,23 @@
 #
 # Docker Environment - Local
-#
+#============================
 
-# Enviroment
-APP_ENV=local
+# ENVIROMENT
+SYS_ENV=local
 
 # DIRECTORIES / VOLUMES / PATHS
-PATH_ENV_CONFIG=../docker/environments/${APP_ENV}.env
 PATH_PROJECT_SOURCE=../src
-PATH_NGINX=../docker/containers/nginx
+PATH_NGINX=./containers/nginx
 PATH_NGINX_CONFIGS=${PATH_NGINX}/conf.d/default.conf
-PATH_DATABASE=../docker/volumes/mysql
+PATH_ENV_CONFIGS=./environments
+PATH_DATABASE=./volumes/mysql
 
 # DATABASE
-DB_MYSQL_VERSION_MYSQL=5.7.22
-DB_MYSQL_VOLUME=${PATH_DATABASE}/mysql_${DB_MYSQL_VERSION_MYSQL}
-DB_MYSQL_DATABASE=db_docker_study
-DB_MYSQL_USER=dbUserDev
-DB_MYSQL_PASSWORD=dbUserDev123
-DB_MYSQL_ROOT_PASSWORD=dbUserRoot123
+DB_DRIVER=mysql
+DB_VERSION=5.7.22
+DB_PORT=3306
+DB_NAME=db_docker_laravel
+DB_USERNAME=dbUserDev
+DB_PASSWORD=dbUserDev123
+DB_PASSWORD_ROOT=dbUserRoot123
+DB_VOLUME=${PATH_DATABASE}/${DB_DRIVER}_${DB_VERSION}
