feature/DLT-24-env-file-reimplementation
- Reimplement env file to allow multi env configuration

--- a/docker/environments/config.env
+++ b/docker/environments/config.env
@@ -1,5 +1,5 @@
 #
-# Docker Environment - Local
+# Docker Environment Config
 #============================
 
 # ENVIROMENT
@@ -16,8 +16,4 @@ PATH_DATABASE=./volumes/mysql
 DB_DRIVER=mysql
 DB_VERSION=5.7.22
 DB_PORT=3306
-DB_NAME=db_docker_laravel
-DB_USERNAME=dbUserDev
-DB_PASSWORD=dbUserDev123
-DB_PASSWORD_ROOT=dbUserRoot123
 DB_VOLUME=${PATH_DATABASE}/${DB_DRIVER}_${DB_VERSION}
