--- a/docker/environments/local.env
+++ b/docker/environments/local.env
@@ -2,22 +2,8 @@
 # Docker Environment - Local
 #============================
 
-# ENVIROMENT
-SYS_ENV=local
-
-# DIRECTORIES / VOLUMES / PATHS
-PATH_PROJECT_SOURCE=../src
-PATH_NGINX=./containers/nginx
-PATH_NGINX_CONFIGS=${PATH_NGINX}/conf.d/default.conf
-PATH_ENV_CONFIGS=./environments
-PATH_DATABASE=./volumes/mysql
-
 # DATABASE
-DB_DRIVER=mysql
-DB_VERSION=5.7.22
-DB_PORT=3306
-DB_NAME=db_docker_laravel
-DB_USERNAME=dbUserDev
-DB_PASSWORD=dbUserDev123
-DB_PASSWORD_ROOT=dbUserRoot123
-DB_VOLUME=${PATH_DATABASE}/${DB_DRIVER}_${DB_VERSION}
+MYSQL_DATABASE=db_docker_laravel
+MYSQL_USER=dbUserDev
+MYSQL_PASSWORD=dbUserDev123
+MYSQL_ROOT_PASSWORD=dbUserRoot123
