--- a/docker/containers/php/Dockerfile
+++ b/docker/containers/php/Dockerfile
@@ -1,7 +1,7 @@
-# Install PHP 7.4
-FROM php:7.4-fpm-alpine
+# Install PHP 8.1
+FROM php:8.1-fpm-alpine
 
 # Install PHP Extension
 RUN apk --no-cache add zip libzip-dev \
     && docker-php-ext-configure zip \
-    && docker-php-ext-install zip pdo pdo_mysql
+    && docker-php-ext-install zip pdo pdo_mysql \
