--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -31,10 +31,11 @@ services:
     networks:
       - web-app
     container_name: mysql
+    command: mysqld --default-authentication-plugin=mysql_native_password
     build:
       context: .
       dockerfile: containers/mysql/Dockerfile
-    image: mysql:mysql-5.7.22
+    image: mysql:mysql-8.0.30
     restart: unless-stopped
     tty: true
     ports:
@@ -61,7 +62,7 @@ services:
     build:
       context: .
       dockerfile: containers/php/Dockerfile
-    image: php:php-7.4-fpm-alpine
+    image: php:php-8.1-fpm-alpine
     ports:
       - "9000:9000"
     volumes:
