webstack/docker-nginx-php81-mysql80-laravel80
- Install Laravel 8
- Update Composer to use PHP 7.4 or 8.0 or 8.1
- Update ReadMe file

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -107,7 +107,7 @@ services:
     build:
       context: .
       dockerfile: containers/php/Dockerfile
-    image: artisan:laravel
+    image: artisan:laravel-8
     env_file:
       - ${PATH_ENV_CONFIGS}/config.env
       - ${PATH_ENV_CONFIGS}/${SYS_ENV}.env
