feature/DLT-29-restructure - Add new .env file templates for environments - Update .env file variables

--- a/docker/environments/config.env
+++ b/docker/environments/config.env
@@ -2,18 +2,19 @@
 # Docker Environment Config
 #============================
 
-# ENVIROMENT
+# SYSTEM VARIABLES
 SYS_ENV=local
 
-# DIRECTORIES / VOLUMES / PATHS
+# PATHS / DIRECTORIES / VOLUMES
+PATH_CONTAINERS=./containers
+PATH_ENVIRONMENTS=./environments
+PATH_VOLUMES=./volumes
+
 PATH_PROJECT_SOURCE=../src
-PATH_NGINX=./containers/nginx
-PATH_NGINX_CONFIGS=${PATH_NGINX}/conf.d/default.conf
-PATH_ENV_CONFIGS=./environments
-PATH_DATABASE=./volumes/mysql
+PATH_CONFIGS_NGINX=${PATH_CONTAINERS}/nginx/conf.d/default.conf
 
 # DATABASE
 DB_DRIVER=mysql
-DB_VERSION=8.0.30
 DB_PORT=3306
-DB_VOLUME=${PATH_DATABASE}/${DB_DRIVER}_${DB_VERSION}
+DB_VERSION=5.7.22
+DB_VOLUME=${PATH_VOLUMES}/${DB_DRIVER}/${DB_DRIVER}_${DB_VERSION}
