--- a/docker/containers/php/Dockerfile
+++ b/docker/containers/php/Dockerfile
@@ -4,4 +4,5 @@ FROM php:8.1-fpm-alpine
 # Install PHP Extension
 RUN apk --no-cache add zip libzip-dev \
     && docker-php-ext-configure zip \
-    && docker-php-ext-install zip pdo pdo_mysql \
+    && docker-php-ext-install zip mysqli pdo pdo_mysql \
+    && docker-php-ext-enable pdo_mysql \
