--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: '3.8'
 
 networks:
   web-app:
@@ -7,7 +7,7 @@ services:
   # +----------------------+ #
   # | Container: NginX     | #
   # +----------------------+ #
-  nginx:
+  webserver:
     networks:
       - web-app
     container_name: nginx
@@ -16,41 +16,13 @@ services:
       dockerfile: containers/nginx/Dockerfile
     image: nginx:nginx-stable-alpine
     ports:
-      - "9100:80"
+      - "8080:80"
     volumes:
+      - "${PATH_CONFIGS_NGINX}:/etc/nginx/conf.d/default.conf"
       - "${PATH_PROJECT_SOURCE}:/var/www/html"
-      - "${PATH_NGINX_CONFIGS}:/etc/nginx/conf.d/default.conf"
     depends_on:
       - php
-      - mysql
-
-  # +----------------------+ #
-  # | Container: MySQL     | #
-  # +----------------------+ #
-  mysql:
-    networks:
-      - web-app
-    container_name: mysql
-    command: mysqld --default-authentication-plugin=mysql_native_password
-    build:
-      context: .
-      dockerfile: containers/mysql/Dockerfile
-    image: mysql:mysql-8.0.30
-    restart: unless-stopped
-    tty: true
-    ports:
-      - "3306:3306"
-    env_file:
-      - ${PATH_ENV_CONFIGS}/${SYS_ENV}.env
-    volumes:
-      - "${DB_VOLUME}:/var/lib/mysql"
-    environment:
-#      MYSQL_DATABASE: "${DB_NAME}"
-#      MYSQL_USER: "${DB_USERNAME}"
-#      MYSQL_PASSWORD: "${DB_PASSWORD}"
-#      MYSQL_ROOT_PASSWORD: "${DB_PASSWORD_ROOT}"
-      SERVICE_TAGS: dev
-      SERVICE_NAME: mysql
+      - database
 
   # +----------------------+ #
   # | Container: PHP       | #
@@ -69,6 +41,35 @@ services:
       - "${PATH_PROJECT_SOURCE}:/var/www/html"
 
   # +----------------------+ #
+  # | Container: MySQL     | #
+  # +----------------------+ #
+  database:
+    networks:
+      - web-app
+    container_name: mysql
+    build:
+      context: .
+      dockerfile: containers/mysql/Dockerfile
+    image: mysql:mysql-${DB_VERSION}
+#    command: mysqld --default-authentication-plugin=mysql_native_password
+    restart: unless-stopped
+    tty: true
+    ports:
+      - "3306:3306"
+    env_file:
+      - ${PATH_ENVIRONMENTS}/${SYS_ENV}.env
+    volumes:
+      - "${DB_VOLUME}:/var/lib/mysql"
+    environment:
+      SERVICE_TAGS: dev
+      SERVICE_NAME: mysql
+# ---- Database Credentials ----
+#      MYSQL_DATABASE: "${DB_NAME}"
+#      MYSQL_USER: "${DB_USERNAME}"
+#      MYSQL_PASSWORD: "${DB_PASSWORD}"
+#      MYSQL_ROOT_PASSWORD: "${DB_PASSWORD_ROOT}"
+
+  # +----------------------+ #
   # | Container: Composer  | #
   # +----------------------+ #
   composer:
@@ -78,10 +79,12 @@ services:
     build:
       context: .
       dockerfile: containers/composer/Dockerfile
-    image: composer:composer-2.1.5
+    image: composer:composer-2.6.1
     working_dir: /var/www/html
     volumes:
       - "${PATH_PROJECT_SOURCE}:/var/www/html"
+    depends_on:
+      - php
     entrypoint: ['composer']
 
   # +----------------------+ #
@@ -108,12 +111,15 @@ services:
       context: .
       dockerfile: containers/php/Dockerfile
     image: artisan:laravel-8
+    links:
+      - php
+      - database
     env_file:
-      - ${PATH_ENV_CONFIGS}/config.env
-      - ${PATH_ENV_CONFIGS}/${SYS_ENV}.env
+      - ${PATH_ENVIRONMENTS}/${SYS_ENV}.env
     working_dir: /var/www/html
     volumes:
       - "${PATH_PROJECT_SOURCE}:/var/www/html"
     depends_on:
-      - mysql
-    entrypoint: ['/var/www/html/artisan']
+      - php
+      - database
+    entrypoint: ['php', '/var/www/html/artisan']
