feature/DLT-29-update-github-action
feature/DLT-29-update-github-action
- Update Github Action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: CI Build
 
 on:
   push:
@@ -7,28 +7,56 @@ on:
     branches: [ "master", "development" ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/checkout@v3
-    - name: Docker login
+
+    - name: Docker Login
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_KEY: ${{ secrets.DOCKER_KEY }}
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_KEY
 
-    - name: Scripts
-      run: chmod +x -R ./scripts/*.sh
-    # Build Docker Images
-    - name: Build the Docker image
+    # Script Permissions
+    - name: Setting up Permissions
+      run: |
+        chmod +x -R ./scripts/*.sh
+        mkdir -p ./storage/logs/ ./bootstrap/cache/
+        chmod 777 ./storage/ ./bootstrap/cache -R
+
+    # Docker Images
+    - name: Building the Docker Images
       run: ./scripts/build.sh
 
-    - name: Start
+    # Docker Containers
+    - name: Start Docker Containers
       run: ./scripts/up.sh -d
 
-    - name: Composer      
-      run: ./scripts/composer.sh install
-      
+    # Composer 
+    - name: Run Composer
+      run: |
+        ./scripts/composer.sh install
+        ./scripts/composer.sh dump-autoload
+
+    # NPM
+    - name: Run NPM
+      run: |
+        ./scripts/run.sh npm install
+        ./scripts/run.sh npm run build
+
+    # Code Quality Check
+    - name: Run PhpStan
+      run: ./scripts/composer.sh run phpstan
+    
+    - name: Run Easy Coding Sandards
+      run: ./scripts/composer.sh run ecs-all
+
+    - name: Run Automated Test with PhpUnit
+      run: ./scripts/composer.sh run phpunit
+
+    # Teardown
+    - name: Stop container and remove images
+      run: ./scripts/down.sh -v
