--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,8 @@ jobs:
       run: |
         ./scripts/composer.sh install
         ./scripts/composer.sh dump-autoload
+        ./scripts/composer.sh run post-root-package-install
+        ./scripts/composer.sh run post-create-project-cmd
 
     # NPM
     - name: Run NPM
