--- a/src/composer.json
+++ b/src/composer.json
@@ -19,7 +19,8 @@
         "nunomaduro/collision": "^6.1",
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "spatie/laravel-ignition": "^1.0",
+        "symplify/easy-coding-standard": "^12.0"
     },
     "autoload": {
         "psr-4": {
@@ -46,6 +47,24 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "phpstan": [
+            "vendor/bin/phpstan --configuration=./phpstan.neon"
+        ],
+        "ecs-all": [
+            "vendor/bin/ecs check app tests --clear-cache"
+        ],
+        "ecs-app": [
+            "vendor/bin/ecs check app --clear-cache"
+        ],
+        "ecs-test": [
+            "vendor/bin/ecs check tests --clear-cache"
+        ],
+        "ecs-app-fix": [
+            "vendor/bin/ecs check app --fix --clear-cache"
+        ],
+        "ecs-test-fix": [
+            "vendor/bin/ecs check tests --fix --clear-cache"
         ]
     },
     "extra": {
