--- a/src/composer.json
+++ b/src/composer.json
@@ -48,6 +48,9 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ],
+        "phpunit": [
+            "vendor/bin/phpunit --configuration phpunit.xml --coverage-text"
+        ],
         "phpstan": [
             "vendor/bin/phpstan --configuration=./phpstan.neon"
         ],
