bugfix/DLT-31-composer-script-exhaust-memory - Fix composer exhaust memory

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -38,6 +38,7 @@ services:
     ports:
       - "9000:9000"
     volumes:
+      - "${PATH_PROJECT_SOURCE}:/usr/local/etc/php/php.ini"
       - "${PATH_PROJECT_SOURCE}:/var/www/html"
 
   # +----------------------+ #
